optimized old (working) version

--- a/web/index.html
+++ b/web/index.html
@@ -59,13 +59,14 @@
   }
   canvas {
       border: solid 3px black;
-//      cursor: none;
+      cursor: none;
       position: absolute;
       top: 25%;
       bottom: 25%;
       left: 25%;
       right: 25%;
-      transition: 50ms;
+      //      transition: 50ms;
+      will-change: webkitTransform;
   }
   body {
   }
