--- a/web/index.html
+++ b/web/index.html
@@ -60,15 +60,17 @@
   canvas {
       border: solid 3px black;
       cursor: none;
-      position: absolute;
+      //      position: absolute;
       top: 25%;
       bottom: 25%;
       left: 25%;
       right: 25%;
-      //      transition: 50ms;
+
       will-change: webkitTransform;
   }
   body {
+      height: 100%;
+      overflow: hidden;
   }
   #color-bar {position: fixed;
 	      top: 0;
